add application-dev properties, application-prod properties and files configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=platzi-play
+spring.profiles.active=dev
 
-langchain4j.open-ai.chat-model.api-key=demo
+# Langchain4j configuration
 langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
+
+# Server configuration
+server.servlet.context-path=/platzi-play/api
