add database container [C connections

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     // LangChain4j
     implementation 'dev.langchain4j:langchain4j-open-ai-spring-boot-starter:1.0.0-beta1'
     implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.0.0-beta1'
+
+    // Spring Data JPA and PostgreSQL
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
