--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,12 @@ spring.application.name=platzi-play
 
 # Server configuration
 server.port=8090
-server.servlet.context-path=/platzi-play/api
+server.servlet.context-path=/platzi-play/
+
+# Spring data jpa
+spring.datasource.url=jdbc:postgresql://localhost:5432/platzi_play_db
+spring.datasource.username=victorisimo
+spring.datasource.password=victorisimo.platzi
 
 # Langchain4j configuration
 langchain4j.open-ai.chat-model.api-key=demo
