--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.profiles.active=dev
 # Langchain4j configuration
 langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
 
+# Postgres configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Server configuration
 server.servlet.context-path=/platzi-play/api
