Add movie entity

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/platzi_play_db
 spring.datasource.username=victorisimo
 spring.datasource.password=victorisimo.platzi
 
+# Database driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 # Langchain4j configuration
 langchain4j.open-ai.chat-model.api-key=demo
 langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
