--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,6 +13,7 @@ spring.datasource.password=victorisimo.platzi
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
 
 # Langchain4j configuration
 langchain4j.open-ai.chat-model.api-key=demo
