--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,17 @@
 spring.application.name=platzi-play
 
 # Server configuration
-server.port=8091
-server.servlet.context-path=/platzi-play/api
+server.port=8080
+server.servlet.context-path=/platzi-play/
+
+# Spring data jpa
+spring.datasource.url=jdbc:postgresql://dpg-d3fd8r49c44c73f9vtv0-a/platzi_play_db_nzq0
+spring.datasource.username=victorisimo
+spring.datasource.password=4FAm71dNBCn7D2GHhPVz9QnbhwqD06aB
+
+# Database driver
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 
 # Langchain4j configuration
 langchain4j.open-ai.chat-model.api-key=demo
