--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.victorisimo'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 description = 'API for platzi play application'
 
 java {
